<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/clockFragment">

    <fragment
        android:id="@+id/clockFragment"
        android:name="com.jnetai.worldtimes.fragments.ClockFragment"
        android:label="@string/nav_clock"
        tools:layout="@layout/fragment_clock" />

    <fragment
        android:id="@+id/utcBlocksFragment"
        android:name="com.jnetai.worldtimes.fragments.UtcBlocksFragment"
        android:label="@string/nav_utc_blocks"
        tools:layout="@layout/fragment_utc_blocks" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.jnetai.worldtimes.fragments.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.jnetai.worldtimes.fragments.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

</navigation>
